# semdt-from-2d-video

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmark/: README.md  embedding_matcher.py  hm3d_ground_truth_loader.py  label_normalizer.py  matcher.py  predicted_loader.py
scripts/: evaluate_scene.py  extract_class_structure.py  inspect_camera_pose.py  load_and_render_scene.py  persist_annotations.py  refine_class_structure.py  reset_class_taxonomy.py  reset_taxonomy.sh  run_batch.py  test_hm3d_world_loader.py  test_render_room_corners.py
scripts/paper_graphics/: compare_gt_vs_predicted.py  compare_gt_vs_predicted_semantic.py  render_annotated_scene.py  render_exploded_view.py  render_semantic_segmentation.py
scripts/utils/: inspect_camera_pose.py  test_glb_conversion.py
src/: hm3d_world_loader.py
src/semdt_2d_video/: hm3d_world_loader.py
